<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_330sdp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/thumbnail"
        android:scaleType="fitXY"
        android:transitionName="iv_thumbnail" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_see_discussion"
        style="@style/RoundedButton.Accent"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:alpha="0"
        android:text="@string/see_a_discussion"
        app:elevation="0dp" />

    <Button
        android:id="@+id/btn_register_waiting_list"
        style="@style/RoundedButton.Primary"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/register_to_waiting_list"
        app:elevation="0dp" />

    <include
        android:id="@+id/bottom_sheet"
        layout="@layout/bottom_sheet_detail_event" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>